--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scroll": "^1.8.4",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.0",
